# Notion-Telegram-Bot

./: .env-example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: hosted_runner_build.yaml
src/: config.py  main.py
src/handlers/: general_callbacks.py  ping.py  router.py  user_callbacks.py  user_commands.py
src/handlers/user_callbacks/: __init__.py  alarms.py  common.py  notes_callbacks.py  themes_callbacks.py
src/handlers/user_callbacks/fsm/: __init__.py  change_alarm.py  change_note.py  change_theme.py  create_alarm.py  create_note.py  create_theme.py  delete_alarm.py  delete_note.py  delete_theme.py  set_alarm_new_repeat_interval.py  set_alarm_repeatable.py  set_new_alarm_time.py
src/models/: alarm_model.py  notes_models.py  themes_modles.py  user_model.py
src/services/: storage_handler.py
src/services/requests/: RequestHandler.py
src/services/scheduler/: scheduler.py
src/services/scheduler/jobs/: check_active_alarms.py
src/services/storage/: alarms_storage_handler.py  interfaces.py  notes_storage_handler.py  storage_handlers.py  themes_storage_handler.py  user_storage_handler.py
src/services/ui/: callbacks.py  inline_keyboards.py  scripts.py
src/utils/: config.py  handlers_utils.py  request_methods.py  statuses.py
src/utils/exceptions/: decorators.py  request.py  storage.py
src/utils/fsm/: fsm.py
